@@ -4,6 +4,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.UUID;
+import java.util.Collection;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 
@@ -32,7 +33,7 @@ public class AdminSecurityMonitorService {
     private final RequestEventRepository requestEventRepository;
     private final UserRepository userRepository;
 
-    @Transactional(readOnly = true)
+    @Transactional(transactionManager = "supabaseTransactionManager", readOnly = true)
     public List<SecurityEventResponse> recentEvents(int limit) {
         int boundedLimit = Math.min(Math.max(limit, 1), 200);
         return securityEventRepository.findAllByOrderByCreatedAtDesc(PageRequest.of(0, boundedLimit)).stream()
@@ -40,7 +41,7 @@ public class AdminSecurityMonitorService {
                 .toList();
     }
 
-    @Transactional(readOnly = true)
+    @Transactional(transactionManager = "supabaseTransactionManager", readOnly = true)
     public List<RequestEventResponse> requestEvents(int limit) {
         int boundedLimit = Math.min(Math.max(limit, 1), 200);
         List<RequestEvent> events = requestEventRepository.findAllByOrderByOccurredAtDesc(PageRequest.of(0, boundedLimit));
@@ -55,21 +56,26 @@ public class AdminSecurityMonitorService {
                 .toList();
     }
 
-    @Transactional(readOnly = true)
+    @Transactional(transactionManager = "supabaseTransactionManager", readOnly = true)
     public List<RequestAggregateResponse> topUsers(int minutes, int limit) {
-        return requestEventRepository.topUsers(since(minutes), PageRequest.of(0, bound(limit))).stream()
-                .map(RequestAggregateResponse::from)
+        var rows = requestEventRepository.topUsers(since(minutes), PageRequest.of(0, bound(limit)));
+        Map<UUID, User> usersById = usersById(rows.stream()
+                .map(com.vibegraph.abuse.RequestAggregateProjection::getUserId)
+                .filter(Objects::nonNull)
+                .toList());
+        return rows.stream()
+                .map(row -> RequestAggregateResponse.from(enrich(row, usersById.get(row.getUserId()))))
                 .toList();
     }
 
-    @Transactional(readOnly = true)
+    @Transactional(transactionManager = "supabaseTransactionManager", readOnly = true)
     public List<RequestAggregateResponse> topIps(int minutes, int limit) {
         return requestEventRepository.topIps(since(minutes), PageRequest.of(0, bound(limit))).stream()
                 .map(RequestAggregateResponse::from)
                 .toList();
     }
 
-    @Transactional(readOnly = true)
+    @Transactional(transactionManager = "supabaseTransactionManager", readOnly = true)
     public List<SuspiciousNetworkResponse> suspiciousNetworks(int minutes, int limit) {
         java.time.Instant since = since(minutes);
         var networks = requestEventRepository.suspiciousNetworks(since, PageRequest.of(0, bound(limit)));
@@ -81,11 +87,37 @@ public class AdminSecurityMonitorService {
                         .toList())
                 .stream()
                 .collect(Collectors.groupingBy(com.vibegraph.abuse.NetworkBreakdownProjection::getIpAddress,
-                        Collectors.mapping(SuspiciousNetworkBreakdownResponse::from, Collectors.toList())));
+                        Collectors.toList()));
+        Map<UUID, User> usersById = usersById(breakdownByIp.values().stream()
+                .flatMap(List::stream)
+                .map(com.vibegraph.abuse.NetworkBreakdownProjection::getUserId)
+                .filter(Objects::nonNull)
+                .toList());
         return networks.stream()
                 .map(network -> SuspiciousNetworkResponse.from(network,
-                        breakdownByIp.getOrDefault(network.getIpAddress(), List.of())))
+                        breakdownByIp.getOrDefault(network.getIpAddress(), List.of()).stream()
+                                .map(row -> SuspiciousNetworkBreakdownResponse.from(
+                                        enrich(row, usersById.get(row.getUserId()))))
+                                .toList()))
                 .toList();
+    }
+
+    private Map<UUID, User> usersById(Collection<UUID> ids) {
+        if (ids.isEmpty()) {
+            return Map.of();
+        }
+        return userRepository.findAllById(ids).stream()
+                .collect(Collectors.toMap(User::getId, Function.identity()));
+    }
+
+    private com.vibegraph.abuse.RequestAggregateProjection enrich(
+            com.vibegraph.abuse.RequestAggregateProjection row, User user) {
+        return new EnrichedRequestAggregate(row, user);
+    }
+
+    private com.vibegraph.abuse.NetworkBreakdownProjection enrich(
+            com.vibegraph.abuse.NetworkBreakdownProjection row, User user) {
+        return new EnrichedNetworkBreakdown(row, user);
     }
 
     private java.time.Instant since(int minutes) {
@@ -95,5 +127,28 @@ public class AdminSecurityMonitorService {
 
     private int bound(int limit) {
         return Math.min(Math.max(limit, 1), 100);
+    }
+
+    private record EnrichedRequestAggregate(
+            com.vibegraph.abuse.RequestAggregateProjection delegate,
+            User user) implements com.vibegraph.abuse.RequestAggregateProjection {
+        @Override public UUID getUserId() { return delegate.getUserId(); }
+        @Override public String getUserDisplayName() { return user == null ? null : user.getDisplayName(); }
+        @Override public String getUserEmail() { return user == null ? null : user.getEmail(); }
+        @Override public String getIpAddress() { return delegate.getIpAddress(); }
+        @Override public String getApiKeyRef() { return delegate.getApiKeyRef(); }
+        @Override public java.time.Instant getMinuteBucket() { return delegate.getMinuteBucket(); }
+        @Override public long getRequestCount() { return delegate.getRequestCount(); }
+    }
+
+    private record EnrichedNetworkBreakdown(
+            com.vibegraph.abuse.NetworkBreakdownProjection delegate,
+            User user) implements com.vibegraph.abuse.NetworkBreakdownProjection {
+        @Override public String getIpAddress() { return delegate.getIpAddress(); }
+        @Override public UUID getUserId() { return delegate.getUserId(); }
+        @Override public String getUserDisplayName() { return user == null ? null : user.getDisplayName(); }
+        @Override public String getUserEmail() { return user == null ? null : user.getEmail(); }
+        @Override public String getApiKeyRef() { return delegate.getApiKeyRef(); }
+        @Override public long getRequests() { return delegate.getRequests(); }
     }
 }
